--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background-color: darkgreen;
+    background-color: rosybrown;
   }
 
 body {
@@ -8,34 +8,47 @@ body {
     margin: 0;
     padding: 0; 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-items: center;
 }
 
+button {
+    border: none;
+    border-radius: 5px;
+    margin: 15px;
+    height: 50px;
+    width: 100px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+img {
+    width: 470px;
+    height: 325px;
+    object-fit:contain;
+}
+
+.header {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
+}
 
 .container {
     display: flex;
     flex-grow: 1;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 100px;
+    margin-right: 100px;
+    margin-left: 100px;
     gap: 100px;
 }
 
-
-.left {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    border: 5px solid black;
-    height: 575px;
-    width: 475px;
-}
-
+.left,
 .right {
     display: flex;
-    border: 5px solid black;
     flex-direction: column;
+    justify-content: space-between;
+    border: 5px solid black;
     height: 575px;
     width: 475px;
 }
@@ -45,10 +58,11 @@ body {
     align-self: flex-end;
 }
 
-.playerScore,
-.computerScore {
+.score {
     font-size: 40px;
     font-family: 'Courier New', Courier, monospace;
+    margin-top: 20px;
+    margin-left: 15px;
 }
 
 .animations {
@@ -56,10 +70,6 @@ body {
 
 }
 
-img {
-    width: 425px;
-    height: 425px;
-}
 
 .choices {
     gap: 10px;
@@ -67,8 +77,44 @@ img {
     justify-content: space-between;
 }
 
-button {
-    margin: 15px;
-    height: 50px;
-    width: 100px;
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    right: 50%;
+    width: 300px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: darkgrey;
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    user-select: none;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+}
+
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.btn-replay {
+    padding: 10px 20px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-color: black;
+    opacity: 0.6;
+}
+
+.overlay.active {
+    display: block;
 }
